First test cases

--- a/test/index.html
+++ b/test/index.html
@@ -14,9 +14,10 @@
     <script>var expect = chai.expect</script>
 
     <!-- include source files here... -->
+    <script src="../dist/hyperagent.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/test.js"></script>
+    <script src="spec/test-agent.js"></script>
 
     <script>mocha.run()</script>
 </body>
