--- a/test/index.html
+++ b/test/index.html
@@ -14,10 +14,12 @@
     <script>var expect = chai.expect</script>
 
     <!-- include source files here... -->
+    <script src="../components/underscore/underscore.js"></script>
     <script src="../dist/hyperagent.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-agent.js"></script>
+    <script src="spec/test-properties.js"></script>
 
     <script>mocha.run()</script>
 </body>
