--- a/test/index.html
+++ b/test/index.html
@@ -8,18 +8,25 @@
 <body>
     <div id="mocha"></div>
     <script src="lib/mocha/mocha.js"></script>
-    <script>mocha.setup('bdd')</script>
+    <script>mocha.setup('tdd')</script>
     <!-- assertion framework -->
     <script src="lib/chai.js"></script>
-    <script>var expect = chai.expect</script>
+    <script>var assert = chai.assert</script>
+
+    <script src="../components/underscore/underscore.js"></script>
+
+    <!-- include fixture files here... -->
+    <script src="fixtures/samples.js"></script>
 
     <!-- include source files here... -->
     <script src="../components/underscore/underscore.js"></script>
+    <script src="../components/jquery/jquery.js"></script>
     <script src="../dist/hyperagent.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-agent.js"></script>
     <script src="spec/test-properties.js"></script>
+    <script src="spec/test-integration.js"></script>
 
     <script>mocha.run()</script>
 </body>
