Use Q for promises. RSVP is too hard to debug

--- a/test/index.html
+++ b/test/index.html
@@ -21,6 +21,7 @@
     <!-- include source files here... -->
     <script src="../components/underscore/underscore.js"></script>
     <script src="../components/jquery/jquery.js"></script>
+    <script src="../components/q/q.js"></script>
     <script src="../dist/hyperagent.js"></script>
 
     <!-- include spec files here... -->
