Fixed CLI mocha

--- a/test/index.html
+++ b/test/index.html
@@ -8,6 +8,7 @@
 <body>
     <div id="mocha"></div>
     <script src="lib/mocha/mocha.js"></script>
+    <script src="lib/utils.js"></script>
     <script>mocha.setup('tdd')</script>
     <!-- assertion framework -->
     <script src="lib/chai.js"></script>
@@ -22,7 +23,7 @@
     <script src="../components/underscore/underscore.js"></script>
     <script src="../components/jquery/jquery.js"></script>
     <script src="../components/q/q.js"></script>
-    <script src="../dist/hyperagent.js"></script>
+    <script src="/hyperagent.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/test-agent.js"></script>
