--- a/test/index.html
+++ b/test/index.html
@@ -26,7 +26,7 @@
     <script src="/hyperagent.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/test-agent.js"></script>
+    <script src="spec/test-resource.js"></script>
     <script src="spec/test-properties.js"></script>
     <script src="spec/test-integration.js"></script>
 
