Moved URL setup to Resource level

--- a/test/index.html
+++ b/test/index.html
@@ -28,6 +28,7 @@
     <!-- include spec files here... -->
     <script src="spec/test-resource.js"></script>
     <script src="spec/test-properties.js"></script>
+    <script src="spec/test-lazy.js"></script>
     <script src="spec/test-integration.js"></script>
 
     <script>
