Removed bundled mocha

--- a/test/index.html
+++ b/test/index.html
@@ -3,15 +3,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Mocha Spec Runner</title>
-    <link rel="stylesheet" href="lib/mocha/mocha.css">
+    <link rel="stylesheet" href="../components/mocha/mocha.css">
 </head>
 <body>
     <div id="mocha"></div>
-    <script src="lib/mocha/mocha.js"></script>
+    <script src="../components/mocha/mocha.js"></script>
     <script src="lib/utils.js"></script>
     <script>mocha.setup('tdd')</script>
     <!-- assertion framework -->
-    <script src="lib/chai.js"></script>
+    <script src="../components/chai/chai.js"></script>
     <script>var assert = chai.assert</script>
 
     <script src="../components/underscore/underscore.js"></script>
