Add URI to test setup

--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,8 @@
     <script src="../components/underscore/underscore.js"></script>
     <script src="../components/jquery/jquery.js"></script>
     <script src="../components/q/q.js"></script>
+    <script src="../components/URIjs/src/URI.js"></script>
+    <script src="../components/URIjs/src/URITemplate.js"></script>
     <script src="/hyperagent.js"></script>
 
     <!-- include spec files here... -->
