LinkResource: Support for templated links

--- a/test/index.html
+++ b/test/index.html
@@ -31,6 +31,7 @@
     <script src="spec/test-resource.js"></script>
     <script src="spec/test-properties.js"></script>
     <script src="spec/test-lazy.js"></script>
+    <script src="spec/test-link.js"></script>
     <script src="spec/test-integration.js"></script>
 
     <script>
