Implemented CurieStore (ref #2)

--- a/test/index.html
+++ b/test/index.html
@@ -33,6 +33,7 @@
     <script src="spec/test-lazy.js"></script>
     <script src="spec/test-link.js"></script>
     <script src="spec/test-integration.js"></script>
+    <script src="spec/test-curie.js"></script>
 
     <script>
       mocha.setup({ globals: ['LiveReload'] });
