--- a/sample/index.html
+++ b/sample/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="hal">
   <meta charset="utf-8">
   <title>HALTalk + hyperagent.js = ♥</title>
   <link rel="stylesheet" href="components/bootstrap/docs/assets/css/bootstrap.css">
@@ -36,7 +36,7 @@
               <li class="nav-header">Users</li>
               <li ng-show="!users.length">Loading …</li>
               <div ng-repeat="user in users">
-                <li class="active"><a href="#">{{ user.title }}</a></li>
+                <li class="active"><a ng-click="navigateToUser(user)" href="#">{{ user.props.title }}</a></li>
               </div>
             </ul>
           </div>
@@ -51,9 +51,11 @@
           </p>
 
           <div ng-show="user">
-            <h2>{{ user.props.title }}</h2>
+            <h2>{{ user.props.real_name }}</h2>
 
-            <p class="alert alert-info" ng-show="!posts.length">Loading messages …</p>
+            <p class="alert alert-info" ng-show="posts == null">Loading messages …</p>
+            <p class="alert alert-warning" ng-show="posts.length == 0">This
+              users hasn't posted any messaged yet.</p>
             <div class="row-fluid">
               <div class="span4" ng-repeat="post in posts">
                 <p>{{ post.props.content }}</p>
@@ -63,7 +65,12 @@
         </div>
       </div>
     </div>
+    <script src="components/uri.js/src/URI.js"></script>
+    <script src="components/uri.js/src/URITemplate.js"></script>
+    <script src="components/q/q.js"></script>
+    <script src="components/jquery/jquery.js"></script>
     <script src="components/angular/angular.js"></script>
+    <script src="../dist/hyperagent.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
